Refactored (renamed) the former HttpFileReader into HttpClient
In fact, that class (HttpFileReader) was implementing the general-purpose
HTTP client. Renaming it allows using this class in other (than just reading
remote files) contexts w/o creating unneccesary confusions. The relevant configuration
class HttpFileReaderConfig has been renamed into HttpClientConfig. The class was moved
into the same header where HttpClient is now residing. A reason of that is that both
classes are always used together.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -140,6 +140,10 @@ target_sources(replica PRIVATE
     GetStatusQservMgtRequest.h
     HealthMonitorTask.cc
     HealthMonitorTask.h
+    HttpClient.cc
+    HttpClient.h
+    HttpClientApp.cc
+    HttpClientApp.h
     HttpCatalogsModule.cc
     HttpCatalogsModule.h
     HttpConfigurationModule.cc
@@ -150,10 +154,6 @@ target_sources(replica PRIVATE
     HttpExceptions.h
     HttpExportModule.cc
     HttpExportModule.h
-    HttpFileReader.cc
-    HttpFileReader.h
-    HttpFileReaderApp.cc
-    HttpFileReaderApp.h
     HttpIngestChunksModule.cc
     HttpIngestChunksModule.h
     HttpIngestConfigModule.cc
@@ -203,8 +203,6 @@ target_sources(replica PRIVATE
     IndexRequest.h
     IngestClient.cc
     IngestClient.h
-    IngestConfigTypes.cc
-    IngestConfigTypes.h
     IngestFileSvc.cc
     IngestFileSvc.h
     IngestHttpSvc.cc
