mimic dependencies of lsst.log in lsst.utils
lsst.log depends on a couple functions in lsst.utils, and
lsst.utils depends on numpy, but not for functions used by
lsst.log. To reduce the run container size we remove numpy
and "mimic" the functions in lsst.utils, by copying them into
a duplicate module tree and installing into the qserv run image.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,6 +37,7 @@ add_subdirectory(css)
 add_subdirectory(czar)
 add_subdirectory(global)
 add_subdirectory(memman)
+add_subdirectory(mimic)
 add_subdirectory(mysql)
 add_subdirectory(parser)
 add_subdirectory(proto)
