Implemented the client API for the redirector/registration server
The interface is available as a new "service" provided by the class
ServiceProvider. It's meant to be used both workers (for registering
themselves at the redirector server) and controlles (for pulling
status and the connection info on the workers).

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -265,6 +265,8 @@ target_sources(replica PRIVATE
     RebalanceApp.h
     RebalanceJob.cc
     RebalanceJob.h
+    Redirector.h
+    Redirector.cc
     RedirectorHttpApp.h
     RedirectorHttpApp.cc
     RedirectorHttpSvc.h
