--- a/src/www/CMakeLists.txt
+++ b/src/www/CMakeLists.txt
@@ -2,4 +2,5 @@ install(
     DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
     DESTINATION ${CMAKE_INSTALL_PREFIX}/qserv/www/
     PATTERN "CMakeLists.txt" EXCLUDE
+    PATTERN "README.md" EXCLUDE
 )
