--- a/src/qhttp/CMakeLists.txt
+++ b/src/qhttp/CMakeLists.txt
@@ -10,6 +10,7 @@ target_sources(qhttp PRIVATE
 )
 
 target_link_libraries(qhttp PUBLIC
+    log
     Boost::filesystem
     Boost::regex
     Boost::system
