Implemented ASYNC client for communicating with HTTP/REST services

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -140,6 +140,10 @@ target_sources(replica PRIVATE
     GetStatusQservMgtRequest.h
     HealthMonitorTask.cc
     HealthMonitorTask.h
+    HttpAsyncReq.h
+    HttpAsyncReq.cc
+    HttpAsyncReqApp.h
+    HttpAsyncReqApp.cc
     HttpClient.cc
     HttpClient.h
     HttpClientApp.cc
