Unit tests for ASYNC HTTP request and ASYNC timer classes
Also implemented the ASYNC timer class to simplify operations
with timers.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -23,6 +23,8 @@ target_sources(replica PRIVATE
     ApplicationColl.h
     ApplicationTypes.cc
     ApplicationTypes.h
+    AsyncTimer.h
+    AsyncTimer.cc
     CheckSumApp.cc
     CheckSumApp.h
     ChunkLocker.cc
@@ -506,6 +508,7 @@ ENDFUNCTION()
 
 replica_tests(
     testApplicationParser
+    testAsyncTimer
     testChunkLocker
     testChunkNumber
     testChunkedTable
@@ -514,6 +517,7 @@ replica_tests(
     testCsv
     testFileIngestApp
     testFileUtils
+    testHttpAsyncReq
     testJson
     testMessageQueue
     testNamedMutexRegistry
