add itest load option to build stats tables
adds an option to the integraiton test yaml:
test_cases/id/build_table_stats (bool)

if this is True, then the integration test loader will tell the
ingest system to build the table stats, so info like
table+chunk row count is available on the czar db.

--- a/src/admin/etc/integration_tests.yaml
+++ b/src/admin/etc/integration_tests.yaml
@@ -13,6 +13,7 @@ qserv-testdata-test-case-dir: datasets
 testdata-output: /qserv/data/
 test_cases:
   - id: case01
+    build_table_stats: True
     root: /tmp/qserv/itest_src/datasets/case01
     data: data/{table_name}.tsv.gz
     schema: data/schema/{table_name}.schema
