--- a/src/ccontrol/CMakeLists.txt
+++ b/src/ccontrol/CMakeLists.txt
@@ -16,6 +16,7 @@ target_sources(ccontrol PRIVATE
     UserQueryFactory.cc
     UserQueryFlushChunksCache.cc
     UserQueryProcessList.cc
+    UserQuerySelectCountStar.cc
     UserQueryQservManager.cc
     UserQueryResources.cc
     UserQuerySelect.cc
