--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
 
 project(Qserv
-    VERSION 0.8
     DESCRIPTION "The Qserv distributed parallel database"
     LANGUAGES CXX
 )
@@ -11,8 +10,8 @@ enable_testing()
 include(GNUInstallDirs)
 set(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR}/install)
 
+add_subdirectory(doc)
 add_subdirectory(extern/log)
 add_subdirectory(extern/partition)
 add_subdirectory(extern/sphgeom)
-
 add_subdirectory(src)
