--- a/src/admin/etc/integration_tests.yaml
+++ b/src/admin/etc/integration_tests.yaml
@@ -30,6 +30,7 @@ test_cases:
         - data/partition/common.json
       output: partition/case01/{table_name}
     ingest:
+      metadata: data/ingest/metadata.json
       database: data/ingest/database.json
       table: data/ingest/{table_name}.json
     tables:
@@ -65,6 +66,7 @@ test_cases:
         - data/partition/common.json
       output: partition/case02/{table_name}
     ingest:
+      metadata: data/ingest/metadata.json
       database: data/ingest/database.json
       table: data/ingest/{table_name}.json
     tables:
@@ -82,6 +84,7 @@ test_cases:
         - data/partition/common.json
       output: partition/case03/{table_name}
     ingest:
+      metadata: data/ingest/metadata.json
       database: data/ingest/database.json
       table: data/ingest/{table_name}.json
     tables:
@@ -139,6 +142,7 @@ test_cases:
         - data/partition/common.json
       output: partition/case04/{table_name}
     ingest:
+      metadata: data/ingest/metadata.json
       database: data/ingest/database.json
       table: data/ingest/{table_name}.json
     tables:
@@ -162,6 +166,7 @@ test_cases:
         - data/partition/common.json
       output: partition/case05/{table_name}
     ingest:
+      metadata: data/ingest/metadata.json
       database: data/ingest/database.json
       table: data/ingest/{table_name}.json
     tables:
