add czar log4cxx configuration
Adds a default log file that gets mounted at /config-etc/log/log.cnf
in the qserv run image.

/config-etc/... is a configuratio mount point so environments like
k8s or docker-compose may mount log config files over that location
to set logging for that container instance.

The CLI command "entrypoint proxy" also now takes an option
--log-cfg-file that can be used to load log4cxx options from a file
at a different location.

--- a/admin/tools/docker/run/Dockerfile
+++ b/admin/tools/docker/run/Dockerfile
@@ -2,7 +2,7 @@
 # The 'lite-qserv' target produces the Qserv unified binary container image -- the end deployment artifact for
 # Qserv. This target layers Qserv binaries and scripts on top of the 'lite-run-base' base image (see
 # 'lite-run-base' target in ../base/Dockerfile), and sets the ownership of the copied files and the default
-# runtime user to 'qserv'. 
+# runtime user to 'qserv'.
 #
 # The target expects a build context where binaries, libs, etc. are in top level directories 'bin/', 'lib64/',
 # etc.  This is typically accomodated by providing Qserv's 'build/install/'' directory as the build context.
@@ -20,6 +20,7 @@ COPY --chown=qserv:qserv lua/ /usr/local/lua/
 COPY --chown=qserv:qserv python/ /usr/local/python/
 COPY --chown=qserv:qserv qserv/ /usr/local/qserv/
 COPY --chown=qserv:qserv etc/ /usr/local/etc/
+COPY --chown=qserv:qserv log/log.cnf /config-etc/log/log.cnf
 
 RUN ldconfig
 
