--- a/src/admin/CMakeLists.txt
+++ b/src/admin/CMakeLists.txt
@@ -3,6 +3,7 @@ install(FILES bin/entrypoint DESTINATION ${CMAKE_INSTALL_BINDIR} PERMISSIONS OWN
 install(DIRECTORY schema/ DESTINATION ${CMAKE_INSTALL_PREFIX}/qserv/smig/admin/schema/)
 install(DIRECTORY etc/ DESTINATION ${CMAKE_INSTALL_PREFIX}/etc FILE_PERMISSIONS OWNER_READ OWNER_WRITE WORLD_READ WORLD_WRITE)
 install(DIRECTORY templates/ DESTINATION ${CMAKE_INSTALL_PREFIX}/qserv/templates USE_SOURCE_PERMISSIONS)
+install(FILES etc/log.cnf DESTINATION ${CMAKE_INSTALL_PREFIX}/log PERMISSIONS OWNER_READ OWNER_WRITE WORLD_READ)
 
 add_test (NAME test_watcher
   COMMAND python3 -m unittest tests.admin.test_watcher
