Added QMeesages table to QMeta.

--- a/src/qmeta/CMakeLists.txt
+++ b/src/qmeta/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries(qserv_meta PUBLIC
     qserv_common
     log
     mysqlclient_r
+    qdisp
 )
 
 install(TARGETS qserv_meta)
@@ -21,6 +22,7 @@ add_executable(testQMeta testQMeta.cc)
 
 target_link_libraries(testQMeta
     qserv_meta
+    qdisp
     Boost::unit_test_framework
     Threads::Threads
 )
