--- a/src/admin/etc/integration_tests.yaml
+++ b/src/admin/etc/integration_tests.yaml
@@ -11,6 +11,12 @@ qserv-testdata-test-case-dir: datasets
 # The location where itest query results will be written. (After writing they
 # are evaluated/compared by the itest tool)
 testdata-output: /qserv/data/
+# The auth key and admin auth key for the replication-ingest system. If running
+# integration tests with docker-compose, it must match the --auth-key and
+# --admin-auth-key values passed to the replication system executables in the
+# docker-compose file.
+repl-auth-key: "replauthkey"
+repl-admin-auth-key: "repladminauthkey"
 test_cases:
   - id: case01
     instance_id: qserv_proj
