--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,6 +41,7 @@ add_subdirectory(memman)
 add_subdirectory(mimic)
 add_subdirectory(mysql)
 add_subdirectory(parser)
+add_subdirectory(partition)
 add_subdirectory(proto)
 add_subdirectory(proxy)
 add_subdirectory(qana)
