Major refactoring of the configuration databases and tables
Tables are now represented by the dedicated class TableInfo. The database
information class DatabaseInfo has been simplified and streamlined.
The change is expected to improve the quality of the code and increase
its robustness.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -51,6 +51,8 @@ target_sources(replica PRIVATE
     ConfigParserJSON.h
     ConfigParserMySQL.cc
     ConfigParserMySQL.h
+    ConfigTable.cc
+    ConfigTable.h
     ConfigTestApp.cc
     ConfigTestApp.h
     ConfigTestData.cc
