Fixed a bug in the replica management loop of the Master Controller
In the previous code, an important option forcing replica synchropnization
at Qserv workers was not being passed to the workers. As a result of this,
workers could still have chunk resources w/o any actual replica behind
them. This situation has been seen in Qserv instances being under heavy
load by the shared scan queries.

Also added the syncoronization forcing option for the Controller in
the integration test.

--- a/admin/local/docker/compose/docker-compose.yml
+++ b/admin/local/docker/compose/docker-compose.yml
@@ -375,6 +375,7 @@ services:
           --xrootd-host=manager-xrootd
           --registry-host=repl-mgr-registry
           --controller-auto-register-workers=1
+          --qserv-sync-force
         environment:
             << : *log-environment
         expose:
