Increased key limits in the configurations of the MariaDB services
The previous limits were too low for production instances

--- a/src/admin/templates/integration-test/etc/my.cnf
+++ b/src/admin/templates/integration-test/etc/my.cnf
@@ -17,10 +17,16 @@ host_cache_size=0
 
 # Configure max number of connections
 # Recommended value: 256 for every 50 simultaneous queries
-max_connections = 4096
+max_connections = 16384
+connect_timeout = 28800
 
 socket = /qserv/data/mysql/mysql.sock
 port = 3306
+
+# Extend read and write connection timeouts that can be triggered
+# by large result sets.
+net_read_timeout=90000
+net_write_timeout=90000
 
 query-cache-size = 0
 
