--- a/src/admin/templates/mariadb/etc/my.cnf
+++ b/src/admin/templates/mariadb/etc/my.cnf
@@ -21,7 +21,8 @@ innodb_file_per_table=1
 
 # Configure max number of connections
 # Recommended value: 256 for every 50 simultaneous queries
-max_connections=1028
+max_connections = 16384
+connect_timeout = 28800
 
 # Configure usage of stats tables if available/generated,
 # enable independant storage engine statistics
@@ -34,9 +35,8 @@ optimizer_use_condition_selectivity=3
 
 # Extend read and write connection timeouts that can be triggerd
 # by large result sets on the workers.
-net_read_timeout=900
-net_write_timeout=900
-
+net_read_timeout=90000
+net_write_timeout=90000
 
 #
 # Advanced logging
